--- a/package.json
+++ b/package.json
@@ -1,26 +1,21 @@
 {
-    "name": "khulnasoft-jupyter",
-    "version": "2.1.1",
-    "description": "The modern coding superpower: free AI code acceleration plugin for your favorite languages. Type less. Code more. Ship faster.",
+    "name": "khulnasoft_jupyter",
+    "version": "0.1.2",
+    "description": "GitHub Copilot for Jupyter",
     "keywords": [
-        "ai",
-        "autocomplete",
-        "intellicode",
-        "intellisense",
-        "code completion",
-        "chatgpt",
         "jupyter",
         "jupyterlab",
-        "jupyterlab-extension",
-        "python"
+        "jupyterlab-extension"
     ],
-    "homepage": "https://github.com/KhulnaSoft/khulnasoft.jupyter",
+    "homepage": "https://github.com/khulnasoft/khulnasoft.jupyter",
     "bugs": {
-        "url": "https://discord.gg/3XFf78nAx5",
-        "email": "support@khulnasoft.com"
+        "url": "https://github.com/khulnasoft/khulnasoft.jupyter/issues"
     },
     "license": "BSD-3-Clause",
-    "author": "KhulnaSoft Inc.",
+    "author": {
+        "name": "khulnasoft_jupyter",
+        "email": "info@khulnasoft.com"
+    },
     "files": [
         "lib/**/*.{d.ts,eot,gif,html,jpg,js,js.map,json,png,svg,woff2,ttf}",
         "style/**/*.{css,js,eot,gif,html,jpg,json,png,svg,woff2,ttf}",
@@ -32,15 +27,15 @@
     "style": "style/index.css",
     "repository": {
         "type": "git",
-        "url": "https://github.com/KhulnaSoft/khulnasoft.jupyter.git"
+        "url": "https://github.com/khulnasoft/khulnasoft.jupyter.git"
     },
     "scripts": {
         "build": "jlpm build:lib && jlpm build:labextension:dev",
         "build:prod": "jlpm clean && jlpm build:lib:prod && jlpm build:labextension",
-        "build:labextension": "jlpm generate && jupyter labextension build .",
-        "build:labextension:dev": "jlpm generate && jupyter labextension build --development True .",
-        "build:lib": "jlpm generate && tsc --sourceMap",
-        "build:lib:prod": "jlpm generate && tsc",
+        "build:labextension": "jupyter labextension build .",
+        "build:labextension:dev": "jupyter labextension build --development True .",
+        "build:lib": "tsc --sourceMap",
+        "build:lib:prod": "tsc",
         "clean": "jlpm clean:lib",
         "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
         "clean:lintcache": "rimraf .eslintcache .stylelintcache",
@@ -48,7 +43,6 @@
         "clean:all": "jlpm clean:lib && jlpm clean:labextension && jlpm clean:lintcache",
         "eslint": "jlpm eslint:check --fix",
         "eslint:check": "eslint . --cache --ext .ts,.tsx",
-        "generate": "rm -rf ./api/proto && node generate.js",
         "install:extension": "jlpm build",
         "lint": "jlpm stylelint && jlpm prettier && jlpm eslint",
         "lint:check": "jlpm stylelint:check && jlpm prettier:check && jlpm eslint:check",
@@ -62,32 +56,29 @@
         "watch:labextension": "jupyter labextension watch ."
     },
     "dependencies": {
-        "@connectrpc/connect": "^1.4.0",
-        "@connectrpc/connect-web": "^1.4.0",
-        "@jupyterlab/application": "^4.0.0",
-        "@jupyterlab/apputils": "^4.0.0",
-        "@jupyterlab/codemirror": "^4.0.0",
-        "@jupyterlab/completer": "^4.0.0",
+        "@jupyterlab/application": "^4.2.4",
+        "@jupyterlab/apputils": "^4.3.4",
+        "@jupyterlab/codemirror": "^4.2.4",
+        "@jupyterlab/completer": "^4.2.4",
+        "@jupyterlab/coreutils": "^6.0.0",
+        "@jupyterlab/fileeditor": "^4.2.4",
+        "@jupyterlab/notebook": "^4.2.4",
+        "@jupyterlab/services": "^7.0.0",
         "@jupyterlab/settingregistry": "^4.0.0",
-        "@lumino/coreutils": "^2.1.2",
-        "uuid": "^9.0.0"
+        "@lumino/widgets": "^2.4.0"
     },
     "devDependencies": {
-        "@bufbuild/buf": "^1.30.0",
-        "@bufbuild/protobuf": "^1.8.0",
         "@jupyterlab/builder": "^4.0.0",
         "@types/json-schema": "^7.0.11",
         "@types/react": "^18.0.26",
         "@types/react-addons-linked-state-mixin": "^0.14.22",
-        "@types/uuid": "^9.0.1",
         "@typescript-eslint/eslint-plugin": "^6.1.0",
         "@typescript-eslint/parser": "^6.1.0",
         "css-loader": "^6.7.1",
-        "dotenv": "^16.3.1",
-        "dotenv-webpack": "^8.0.0",
         "eslint": "^8.36.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-prettier": "^5.0.0",
+        "mkdirp": "^1.0.3",
         "npm-run-all": "^4.1.5",
         "prettier": "^3.0.0",
         "rimraf": "^5.0.1",
@@ -110,6 +101,16 @@
         "access": "public"
     },
     "jupyterlab": {
+        "discovery": {
+            "server": {
+                "managers": [
+                    "pip"
+                ],
+                "base": {
+                    "name": "khulnasoft_jupyter"
+                }
+            }
+        },
         "extension": true,
         "outputDir": "khulnasoft_jupyter/labextension",
         "schemaDir": "schema"
