--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,20 @@
 [build-system]
-requires = ["hatchling>=1.5.0", "jupyterlab>=4.1.0,<5", "hatch-nodejs-version>=0.3.2"]
+requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version>=0.3.2"]
 build-backend = "hatchling.build"
 
 [project]
-name = "khulnasoft-jupyter"
+name = "khulnasoft_jupyter"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.8"
+requires-nodejs = ">=18"
 classifiers = [
     "Framework :: Jupyter",
     "Framework :: Jupyter :: JupyterLab",
     "Framework :: Jupyter :: JupyterLab :: 4",
     "Framework :: Jupyter :: JupyterLab :: Extensions",
     "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
-    "License :: OSI Approved :: BSD License",
+    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
@@ -23,8 +24,9 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
 ]
 dependencies = [
+    "jupyter_server>=2.0.1,<3"
 ]
-dynamic = ["version", "description", "authors", "urls", "keywords"]
+dynamic = ["version", "description", "authors", "keywords", "urls"]
 
 [tool.hatch.version]
 source = "nodejs"
@@ -33,12 +35,16 @@ source = "nodejs"
 fields = ["description", "authors", "urls"]
 
 [tool.hatch.build.targets.sdist]
-artifacts = ["khulnasoft_jupyter/labextension"]
+artifacts = ["khulnasoft_jupyter/labextension", "khulnasoft_jupyter/dist"]
 exclude = [".github", "binder"]
 
 [tool.hatch.build.targets.wheel.shared-data]
-"khulnasoft_jupyter/labextension" = "share/jupyter/labextensions/khulnasoft-jupyter"
-"install.json" = "share/jupyter/labextensions/khulnasoft-jupyter/install.json"
+"khulnasoft_jupyter/labextension" = "share/jupyter/labextensions/khulnasoft_jupyter"
+"install.json" = "share/jupyter/labextensions/khulnasoft_jupyter/install.json"
+"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"
+
+[tool.hatch.build.targets.wheel.force-include]
+"khulnasoft_jupyter/dist" = "khulnasoft_jupyter/dist"
 
 [tool.hatch.build.hooks.version]
 path = "khulnasoft_jupyter/_version.py"
