--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,8 +17,7 @@
     "rootDir": "src",
     "strict": true,
     "strictNullChecks": true,
-    "target": "ES2020",
-    "types": ["node"]
+    "target": "ES2018"
   },
   "include": ["src/**/*"]
 }
