--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
         python -m pip install .[test]
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "khulnasoft-jupyter.*OK"
+        jupyter labextension list 2>&1 | grep -ie "khulnasoft.jupyter.*OK"
         python -m jupyterlab.browser_check
 
     - name: Package the extension
@@ -78,7 +78,7 @@ jobs:
 
 
         jupyter labextension list
-        jupyter labextension list 2>&1 | grep -ie "khulnasoft-jupyter.*OK"
+        jupyter labextension list 2>&1 | grep -ie "khulnasoft.jupyter.*OK"
         python -m jupyterlab.browser_check --no-browser-test
 
 
